// ER-диаграмма для SoundCloudd - музыкальной платформы
// Можно скопировать и вставить на https://dbdiagram.io/

Table User {
  id integer [primary key]
  username varchar
  email varchar
  password varchar
  first_name varchar
  last_name varchar
  date_joined datetime
  Note: 'Встроенная модель Django'
}

Table Profile {
  id integer [primary key]
  user_id integer [ref: - User.id, not null]
  bio text
  avatar varchar
  location varchar(100)
  website varchar
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
  Note: 'Профиль пользователя (артиста)'
}

Table Genre {
  id integer [primary key]
  name varchar(50) [unique, not null]
  slug varchar(50) [unique, not null]
  description text
  created_at datetime [default: `now()`]

  indexes {
    name
  }
  Note: 'Музыкальный жанр'
}

Table Track {
  id integer [primary key]
  title varchar(200) [not null]
  slug varchar(200) [unique, not null]
  author_id integer [ref: > User.id, not null]
  audio_file varchar [not null]
  cover varchar
  description text
  duration interval
  genre_id integer [ref: > Genre.id]
  plays_count integer [default: 0]
  downloads_allowed boolean [default: false]
  is_public boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]

  indexes {
    author_id
    genre_id
    created_at
    plays_count
  }
  Note: 'Музыкальный трек'
}

Table Comment {
  id integer [primary key]
  track_id integer [ref: > Track.id, not null]
  user_id integer [ref: > User.id, not null]
  text text [not null]
  timestamp integer
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]

  indexes {
    (track_id, created_at)
  }
  Note: 'Комментарий к треку. timestamp - момент трека в секундах'
}

Table Like {
  id integer [primary key]
  track_id integer [ref: > Track.id, not null]
  user_id integer [ref: > User.id, not null]
  created_at datetime [default: `now()`]

  indexes {
    track_id
    (user_id, track_id) [unique]
  }
  Note: 'Лайк трека. Один пользователь - один лайк на трек'
}

Table Playlist {
  id integer [primary key]
  name varchar(200) [not null]
  slug varchar(200) [not null]
  user_id integer [ref: > User.id, not null]
  description text
  cover varchar
  is_public boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]

  indexes {
    user_id
  }
  Note: 'Плейлист пользователя'
}

Table PlaylistTrack {
  id integer [primary key]
  playlist_id integer [ref: > Playlist.id, not null]
  track_id integer [ref: > Track.id, not null]
  order integer [default: 0]
  added_at datetime [default: `now()`]

  indexes {
    (playlist_id, track_id) [unique]
  }
  Note: 'Связь плейлиста и трека. order - порядок в плейлисте'
}

Table Follow {
  id integer [primary key]
  follower_id integer [ref: > User.id, not null]
  following_id integer [ref: > User.id, not null]
  created_at datetime [default: `now()`]

  indexes {
    follower_id
    following_id
    (follower_id, following_id) [unique]
  }
  Note: 'Подписка на пользователя. follower подписан на following'
}

Table Play {
  id integer [primary key]
  track_id integer [ref: > Track.id, not null]
  user_id integer [ref: > User.id]
  ip_address varchar
  played_at datetime [default: `now()`]

  indexes {
    (track_id, played_at)
  }
  Note: 'История прослушиваний. user_id может быть null для анонимных'
}

// Связи (для наглядности):
// User 1:1 Profile
// User 1:N Track (author)
// User 1:N Comment
// User 1:N Like
// User 1:N Playlist
// User 1:N Follow (follower)
// User 1:N Follow (following)
// User 1:N Play
// Genre 1:N Track
// Track 1:N Comment
// Track 1:N Like
// Track 1:N PlaylistTrack
// Track 1:N Play
// Playlist 1:N PlaylistTrack
